Correction des tests dans MetricsUtilsTest pour résoudre les problèmes d'encodage et d'assertions